// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with title 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 MuiCard-root-1"
>
  <div
    className="MuiCardHeader-root-29"
  >
    <div
      className="MuiCardHeader-content-32"
    >
      <span
        className="MuiTypography-root-35 MuiTypography-headline-40 MuiCardHeader-title-33"
      >
        foo
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root-59"
  >
    <form
      onSubmit={undefined}
    >
      Baz
    </form>
  </div>
  <div
    className="MuiCardActions-root-60"
    style={
      Object {
        "paddingBottom": 16,
        "paddingLeft": 24,
        "paddingRight": 24,
      }
    }
  >
    <button
      className="MuiButtonBase-root-78 MuiButton-root-62 MuiButton-raised-68 MuiButton-raisedPrimary-69 MuiCardActions-action-61"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-63"
      >
        bar
      </span>
      <span
        className="MuiTouchRipple-root-81"
      />
    </button>
  </div>
</div>
`;

exports[`renders correctly without title 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 MuiCard-root-1"
>
  <div
    className="MuiCardContent-root-59"
  >
    <form
      onSubmit={undefined}
    >
      Bar
    </form>
  </div>
  <div
    className="MuiCardActions-root-60"
    style={
      Object {
        "paddingBottom": 16,
        "paddingLeft": 24,
        "paddingRight": 24,
      }
    }
  >
    <button
      className="MuiButtonBase-root-78 MuiButton-root-62 MuiButton-raised-68 MuiButton-raisedPrimary-69 MuiCardActions-action-61"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-63"
      >
        foo
      </span>
      <span
        className="MuiTouchRipple-root-81"
      />
    </button>
  </div>
</div>
`;
